<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tv_header_user_registration"
        style="@style/text_header"
        android:text="@string/user_registration" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/text_label"
        android:layout_below="@id/tv_header_user_registration"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/et_username"
        style="@style/edit_text"
        android:layout_below="@id/tv_username" />

    <TextView
        android:id="@+id/tv_gender"
        style="@style/text_label"
        android:layout_below="@id/et_username"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gender" >
        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_phone_no"
        style="@style/text_label"
        android:layout_below="@id/rg_gender"
        android:text="@string/phone_no" />

    <EditText
        android:id="@+id/et_phone_no"
        style="@style/edit_text"
        android:inputType="number"
        android:layout_below="@id/tv_phone_no" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/text_label"
        android:layout_below="@id/et_phone_no"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        style="@style/edit_text_password"
        android:layout_below="@id/tv_password" />

    <TextView
        android:id="@+id/tv_confirm_password"
        style="@style/text_label"
        android:layout_below="@id/et_password"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/edit_text_password"
        android:layout_below="@id/tv_confirm_password" />

    <Button
        android:id="@+id/btn_register"
        style="@style/button"
        android:layout_below="@id/et_confirm_password"
        android:enabled="false"
        android:text="@string/register" />

</RelativeLayout>
