<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_header_login"
        style="@style/text_header"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/text_label"
        android:layout_below="@id/tv_header_login"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/et_username"
        style="@style/edit_text"
        android:layout_below="@id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/text_label"
        android:layout_below="@id/et_username"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_password"
        style="@style/edit_text"
        android:layout_below="@id/tv_password" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button"
        android:layout_below="@id/et_password"
        android:enabled="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_new_user"
        style="@style/text_label"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_login"
        android:text="@string/new_user" />

</RelativeLayout>
