<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/tv_header_user_details"
        style="@style/text_header"
        android:text="@string/user_details" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/text_label"
        android:layout_below="@id/tv_header_user_details"
        android:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_username_value"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_username"
        android:gravity="right"
        android:layout_alignTop="@id/tv_username" />

    <TextView
        android:id="@+id/tv_gender"
        style="@style/text_label"
        android:layout_below="@id/tv_username_value"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/tv_gender_value"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_gender"
        android:gravity="right"
        android:layout_alignTop="@id/tv_gender" />

    <TextView
        android:id="@+id/tv_phone_no"
        style="@style/text_label"
        android:layout_below="@id/tv_gender_value"
        android:text="@string/phone_no" />

    <TextView
        android:id="@+id/tv_phone_no_value"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/tv_phone_no"
        android:gravity="right"
        android:layout_alignTop="@id/tv_phone_no" />

</RelativeLayout>
